--- a/css/resume.css
+++ b/css/resume.css
@@ -160,17 +160,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #000000 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #000000;
 }
 
 a {
-  color: #BD5D38;
+  color: #000000;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #000000;
 }
