inclusao de novo certificado

--- a/css/resume.css
+++ b/css/resume.css
@@ -160,17 +160,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #000000 !important;
+  background-color: #283761 !important;
 }
 
 .text-primary {
-  color: #000000;
+  color: #6c7692;
 }
 
 a {
-  color: #000000;
+  color: #6c7692;
 }
 
 a:hover, a:focus, a:active {
-  color: #000000;
+  color: #6c7692;
 }
